fixed positioning on mobile and fixed vars

--- a/assets/styles/about/about.scss
+++ b/assets/styles/about/about.scss
@@ -300,7 +300,7 @@
 		height: auto;
 		@media (max-width: $mobile) {
 			width: 90%;
-			order: -1;
+			order: 2;
 		}
 	}
 	&__paragraph {
@@ -312,6 +312,7 @@
 		@media (max-width: $mobile) {
 			font-size: 18px;
 			text-align: center;
+			order: 1;
 		}
 	}
 }
@@ -341,7 +342,7 @@
 		column-gap: 30px;
 		padding: 30px;
 		background-color: $bg-color-accent;
-		border: 3px solid $border-color;
+		border: 3px solid $bg-color-dark;
 		border-radius: 6px;
 		@media (max-width: $tablet) {
 			padding: 20px;
